--- a/templates/index.html
+++ b/templates/index.html
@@ -11,37 +11,34 @@
         <title>Kecerdasan Buatan</title>
     </head>
     <body>
-        <section class="flex justify-center items-center w-screen h-screen bg-green-500">
-            <main class="flex flex-col justify-center items-center p-16 bg-white rounded-lg">
+        <section class="flex justify-center items-center w-screen h-screen bg-blue-500">
+            <main class="flex flex-col justify-center items-center p-24 bg-white">
                 <h1 class="text-3xl text-bold">Identifikasi Jenis Tanaman Melalui Daun</h1>
-                <h1 class="text-3xl text-bold">Jambu Biji dan Seledri</h1>
 
                 {% if uploaded_image %}
                 <img
                     src="{{ url_for('send_uploaded_image', filename=uploaded_image) }}"
-                    class="mt-8 mb-4 h-48 border-8 border-yellow-200 rounded-md"
+                    class="mt-8 mb-4 h-48 border-4"
                 />
                 {% else %}
-                <div
-                    class="flex justify-center items-center my-8 w-48 h-48 border-8 border-yellow-200 rounded-md">
+
+                <!-- <div class="flex justify-center items-center my-8 w-48 h-48 border-4">
                     <p class="text-center">
-                        Masukkan gambar daun Pepaya atau daun Seledri wuluh (background putih)
+                        Masukkan gambar daun
                     </p>
-                </div>
+                </div> -->
+                
                 {% endif %} {% if prediction %}
                 <p class="mb-8">Hasil Prediksi: {{prediction}}</p>
                 {% endif %}
 
                 <form method="post" enctype="multipart/form-data" class="flex flex-col">
-                    <input type="file" name="image" class="mb-4 p-4 border-8 border-yellow-200 rounded-md bg-gray-100"/>
-                    <button type="submit" class="p-4 bg-green-500 text-white rounded-md">
+                    <input type="file" name="image" class="mb-4 p-4 border-4 bg-gray-100"/>
+                    <button type="submit" class="p-4 bg-blue-500 text-white">
                         Prediksi Gambar
                     </button>
                 </form>
             </main>
         </section>
-        <footer class="flex gap-x-8 justify-center items-center h-32 bg-white">
-            <p>Pemenuhan Tugas Kecerdasan</p>
-        </footer>
     </body>
 </html>
